Meta_4/y.output
Terminals unused in grammar

   RESERVED


State 81 conflicts: 20 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: FunctionsAndDeclarations

    2 FunctionsAndDeclarations: FunctionDefinition
    3                         | FunctionDeclaration
    4                         | Declaration
    5                         | FunctionsAndDeclarations FunctionDefinition
    6                         | FunctionsAndDeclarations FunctionDeclaration
    7                         | FunctionsAndDeclarations Declaration

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    9 FunctionBody: LBRACE DeclarationsAndStatements RBRACE
   10             | LBRACE RBRACE

   11 DeclarationsAndStatements: DeclarationsAndStatements Statement
   12                          | DeclarationsAndStatements Declaration
   13                          | Statement
   14                          | Declaration

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   16 FunctionDeclarator: ID LPAR ParameterList RPAR

   17 ParameterList: ParameterDeclaration

   18 ParameterDeclaration: ParameterDeclaration COMMA ParameterDeclaration
   19                     | TypeSpec ID
   20                     | TypeSpec

   21 Declaration: TypeSpec Declarator SEMI
   22            | error SEMI

   23 TypeSpec: CHAR
   24         | INT
   25         | VOID
   26         | SHORT
   27         | DOUBLE

   28 Declarator: Declarator COMMA Declarator
   29           | ID
   30           | ID ASSIGN Expr

   31 Statement: Expr SEMI
   32          | SEMI
   33          | LBRACE Statlist Statement RBRACE
   34          | LBRACE Statement RBRACE
   35          | LBRACE RBRACE
   36          | IF LPAR Expr RPAR Statement
   37          | IF LPAR Expr RPAR Statement ELSE Statement
   38          | WHILE LPAR Expr RPAR Statement
   39          | RETURN Expr SEMI
   40          | RETURN SEMI
   41          | error SEMI
   42          | LBRACE error RBRACE

   43 Statlist: Statlist Statement
   44         | Statement

   45 Expr: Expr ASSIGN Expr
   46     | Expr COMMA Expr
   47     | Expr PLUS Expr
   48     | Expr MINUS Expr
   49     | Expr MUL Expr
   50     | Expr DIV Expr
   51     | Expr MOD Expr
   52     | Expr OR Expr
   53     | Expr AND Expr
   54     | Expr BITWISEAND Expr
   55     | Expr BITWISEOR Expr
   56     | Expr BITWISEXOR Expr
   57     | Expr EQ Expr
   58     | Expr NE Expr
   59     | Expr LE Expr
   60     | Expr GE Expr
   61     | Expr LT Expr
   62     | Expr GT Expr
   63     | PLUS Expr
   64     | MINUS Expr
   65     | NOT Expr
   66     | ID LPAR RPAR
   67     | ID LPAR Expr RPAR
   68     | ID
   69     | INTLIT
   70     | CHRLIT
   71     | REALLIT
   72     | LPAR Expr RPAR
   73     | ID LPAR error RPAR
   74     | LPAR error RPAR


Terminals, with rules where they appear

$end (0) 0
error (256) 22 41 42 73 74
BITWISEAND (258) 54
BITWISEOR (259) 55
BITWISEXOR (260) 56
AND (261) 53
ASSIGN (262) 30 45
COMMA (263) 18 28 46
DIV (264) 50
EQ (265) 57
GE (266) 60
GT (267) 62
LBRACE (268) 9 10 33 34 35 42
LE (269) 59
LPAR (270) 16 36 37 38 66 67 72 73 74
LT (271) 61
MINUS (272) 48 64
MOD (273) 51
NE (274) 58
NOT (275) 65
OR (276) 52
PLUS (277) 47 63
RBRACE (278) 9 10 33 34 35 42
RPAR (279) 16 36 37 38 66 67 72 73 74
SEMI (280) 15 21 22 31 32 39 40 41
CHAR (281) 23
ELSE (282) 37
WHILE (283) 38
IF (284) 36 37
INT (285) 24
SHORT (286) 26
DOUBLE (287) 27
RETURN (288) 39 40
VOID (289) 25
REALLIT (290) 71
INTLIT (291) 69
RESERVED (292)
ID (293) 16 19 29 30 66 67 68 73
CHRLIT (294) 70
MUL (295) 49
NO_ELSE (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 1, on right: 0
FunctionsAndDeclarations (44)
    on left: 2 3 4 5 6 7, on right: 1 5 6 7
FunctionDefinition (45)
    on left: 8, on right: 2 5
FunctionBody (46)
    on left: 9 10, on right: 8
DeclarationsAndStatements (47)
    on left: 11 12 13 14, on right: 9 11 12
FunctionDeclaration (48)
    on left: 15, on right: 3 6
FunctionDeclarator (49)
    on left: 16, on right: 8 15
ParameterList (50)
    on left: 17, on right: 16
ParameterDeclaration (51)
    on left: 18 19 20, on right: 17 18
Declaration (52)
    on left: 21 22, on right: 4 7 12 14
TypeSpec (53)
    on left: 23 24 25 26 27, on right: 8 15 19 20 21
Declarator (54)
    on left: 28 29 30, on right: 21 28
Statement (55)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42, on right: 11 13 33
    34 36 37 38 43 44
Statlist (56)
    on left: 43 44, on right: 33 43
Expr (57)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 66 67 68 69 70 71 72 73 74, on right: 30 31 36 37 38 39
    45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    67 72


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    Program                   go to state 7
    FunctionsAndDeclarations  go to state 8
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    TypeSpec                  go to state 12


State 1

   22 Declaration: error . SEMI

    SEMI  shift, and go to state 13


State 2

   23 TypeSpec: CHAR .

    $default  reduce using rule 23 (TypeSpec)


State 3

   24 TypeSpec: INT .

    $default  reduce using rule 24 (TypeSpec)


State 4

   26 TypeSpec: SHORT .

    $default  reduce using rule 26 (TypeSpec)


State 5

   27 TypeSpec: DOUBLE .

    $default  reduce using rule 27 (TypeSpec)


State 6

   25 TypeSpec: VOID .

    $default  reduce using rule 25 (TypeSpec)


State 7

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 8

    1 Program: FunctionsAndDeclarations .
    5 FunctionsAndDeclarations: FunctionsAndDeclarations . FunctionDefinition
    6                         | FunctionsAndDeclarations . FunctionDeclaration
    7                         | FunctionsAndDeclarations . Declaration

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 1 (Program)

    FunctionDefinition   go to state 15
    FunctionDeclaration  go to state 16
    Declaration          go to state 17
    TypeSpec             go to state 12


State 9

    2 FunctionsAndDeclarations: FunctionDefinition .

    $default  reduce using rule 2 (FunctionsAndDeclarations)


State 10

    3 FunctionsAndDeclarations: FunctionDeclaration .

    $default  reduce using rule 3 (FunctionsAndDeclarations)


State 11

    4 FunctionsAndDeclarations: Declaration .

    $default  reduce using rule 4 (FunctionsAndDeclarations)


State 12

    8 FunctionDefinition: TypeSpec . FunctionDeclarator FunctionBody
   15 FunctionDeclaration: TypeSpec . FunctionDeclarator SEMI
   21 Declaration: TypeSpec . Declarator SEMI

    ID  shift, and go to state 18

    FunctionDeclarator  go to state 19
    Declarator          go to state 20


State 13

   22 Declaration: error SEMI .

    $default  reduce using rule 22 (Declaration)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    5 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDefinition .

    $default  reduce using rule 5 (FunctionsAndDeclarations)


State 16

    6 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDeclaration .

    $default  reduce using rule 6 (FunctionsAndDeclarations)


State 17

    7 FunctionsAndDeclarations: FunctionsAndDeclarations Declaration .

    $default  reduce using rule 7 (FunctionsAndDeclarations)


State 18

   16 FunctionDeclarator: ID . LPAR ParameterList RPAR
   29 Declarator: ID .
   30           | ID . ASSIGN Expr

    ASSIGN  shift, and go to state 21
    LPAR    shift, and go to state 22

    $default  reduce using rule 29 (Declarator)


State 19

    8 FunctionDefinition: TypeSpec FunctionDeclarator . FunctionBody
   15 FunctionDeclaration: TypeSpec FunctionDeclarator . SEMI

    LBRACE  shift, and go to state 23
    SEMI    shift, and go to state 24

    FunctionBody  go to state 25


State 20

   21 Declaration: TypeSpec Declarator . SEMI
   28 Declarator: Declarator . COMMA Declarator

    COMMA  shift, and go to state 26
    SEMI   shift, and go to state 27


State 21

   30 Declarator: ID ASSIGN . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 36


State 22

   16 FunctionDeclarator: ID LPAR . ParameterList RPAR

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterList         go to state 37
    ParameterDeclaration  go to state 38
    TypeSpec              go to state 39


State 23

    9 FunctionBody: LBRACE . DeclarationsAndStatements RBRACE
   10             | LBRACE . RBRACE

    error    shift, and go to state 40
    LBRACE   shift, and go to state 41
    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    RBRACE   shift, and go to state 42
    SEMI     shift, and go to state 43
    CHAR     shift, and go to state 2
    WHILE    shift, and go to state 44
    IF       shift, and go to state 45
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    RETURN   shift, and go to state 46
    VOID     shift, and go to state 6
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    DeclarationsAndStatements  go to state 47
    Declaration                go to state 48
    TypeSpec                   go to state 49
    Statement                  go to state 50
    Expr                       go to state 51


State 24

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI .

    $default  reduce using rule 15 (FunctionDeclaration)


State 25

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody .

    $default  reduce using rule 8 (FunctionDefinition)


State 26

   28 Declarator: Declarator COMMA . Declarator

    ID  shift, and go to state 52

    Declarator  go to state 53


State 27

   21 Declaration: TypeSpec Declarator SEMI .

    $default  reduce using rule 21 (Declaration)


State 28

   72 Expr: LPAR . Expr RPAR
   74     | LPAR . error RPAR

    error    shift, and go to state 54
    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 55


State 29

   64 Expr: MINUS . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 56


State 30

   65 Expr: NOT . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 57


State 31

   63 Expr: PLUS . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 58


State 32

   71 Expr: REALLIT .

    $default  reduce using rule 71 (Expr)


State 33

   69 Expr: INTLIT .

    $default  reduce using rule 69 (Expr)


State 34

   66 Expr: ID . LPAR RPAR
   67     | ID . LPAR Expr RPAR
   68     | ID .
   73     | ID . LPAR error RPAR

    LPAR  shift, and go to state 59

    $default  reduce using rule 68 (Expr)


State 35

   70 Expr: CHRLIT .

    $default  reduce using rule 70 (Expr)


State 36

   30 Declarator: ID ASSIGN Expr .
   45 Expr: Expr . ASSIGN Expr
   46     | Expr . COMMA Expr
   47     | Expr . PLUS Expr
   48     | Expr . MINUS Expr
   49     | Expr . MUL Expr
   50     | Expr . DIV Expr
   51     | Expr . MOD Expr
   52     | Expr . OR Expr
   53     | Expr . AND Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . BITWISEOR Expr
   56     | Expr . BITWISEXOR Expr
   57     | Expr . EQ Expr
   58     | Expr . NE Expr
   59     | Expr . LE Expr
   60     | Expr . GE Expr
   61     | Expr . LT Expr
   62     | Expr . GT Expr

    BITWISEAND  shift, and go to state 60
    BITWISEOR   shift, and go to state 61
    BITWISEXOR  shift, and go to state 62
    AND         shift, and go to state 63
    ASSIGN      shift, and go to state 64
    DIV         shift, and go to state 66
    EQ          shift, and go to state 67
    GE          shift, and go to state 68
    GT          shift, and go to state 69
    LE          shift, and go to state 70
    LT          shift, and go to state 71
    MINUS       shift, and go to state 72
    MOD         shift, and go to state 73
    NE          shift, and go to state 74
    OR          shift, and go to state 75
    PLUS        shift, and go to state 76
    MUL         shift, and go to state 77

    $default  reduce using rule 30 (Declarator)


State 37

   16 FunctionDeclarator: ID LPAR ParameterList . RPAR

    RPAR  shift, and go to state 78


State 38

   17 ParameterList: ParameterDeclaration .
   18 ParameterDeclaration: ParameterDeclaration . COMMA ParameterDeclaration

    COMMA  shift, and go to state 79

    $default  reduce using rule 17 (ParameterList)


State 39

   19 ParameterDeclaration: TypeSpec . ID
   20                     | TypeSpec .

    ID  shift, and go to state 80

    $default  reduce using rule 20 (ParameterDeclaration)


State 40

   22 Declaration: error . SEMI
   41 Statement: error . SEMI

    SEMI  shift, and go to state 81


State 41

   33 Statement: LBRACE . Statlist Statement RBRACE
   34          | LBRACE . Statement RBRACE
   35          | LBRACE . RBRACE
   42          | LBRACE . error RBRACE

    error    shift, and go to state 82
    LBRACE   shift, and go to state 41
    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    RBRACE   shift, and go to state 83
    SEMI     shift, and go to state 43
    WHILE    shift, and go to state 44
    IF       shift, and go to state 45
    RETURN   shift, and go to state 46
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Statement  go to state 84
    Statlist   go to state 85
    Expr       go to state 51


State 42

   10 FunctionBody: LBRACE RBRACE .

    $default  reduce using rule 10 (FunctionBody)


State 43

   32 Statement: SEMI .

    $default  reduce using rule 32 (Statement)

